# config_file

./: README.md
c++_opencv_config/: CMakeLists.txt
